--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "4.6",
+    "firebase": "^10.14.1",
     "jquery": "^3.7.1",
+    "ngx-cookie-service": "^19.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
